Adding the place holder for profile which would be passed as an JAM or Java Application Argument

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -4,4 +4,4 @@ spring.cloud.config.uri=http://localhost:8888
 #The following is the URL for fetching configuration from Local file system via Spring Cloud Config Server
 #spring.cloud.config.uri=http://localhost:8889
 #The following value has to be passed as 'VM argument' or 'Java Application argument' at part of deployment and startup 
-spring.cloud.config.profile=dev
+spring.cloud.config.profile={profile}
