Adding Refresh Mode For Message Read and Yml based config files to enable profile specific mgmt uris

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
 	set('springCloudVersion', 'Greenwich.RELEASE')
 }
 
+//The Following is Custom Configuration
 bootRun {
 	if (project.hasProperty('args')) {
 		args project.args.split(',')
