--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// The following implementation is for enabling this service to be a config client
+	
+	// Spring cloud bus implementation
+	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+		
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
