Code change to implement fault tolerance with Hystrix

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// The following implementation is for enabling this service to be a config client
 	
+	// For making the micro service fault tolerant
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+	
 	// Spring cloud bus implementation
 	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 		
