--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ bootRun {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// The following implementation is for enabling this service to be a config client
+	implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	
 	// For making the micro service fault tolerant
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
