--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	
+	// The following implementation is for enabling this service to be a config client
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	
 	// For making the micro service fault tolerant
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 	
@@ -41,7 +44,6 @@ dependencies {
 	
 	
 		
-	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
